SUBDIRS = debug-plugin

ACLOCAL_AMFLAGS = -I ../m4
AUTOMAKE_OPTIONS = foreign dejagnu

EXTRADIST = config/unix.exp \
    dstorm.test/00-dstorm.exp \
    dstorm.test/autoname.exp \
    dstorm.test/bug3.exp \
    dstorm.test/emergency_cam_shutdown.exp \
    dstorm.test/filenames.exp \
    dstorm.test/help.exp \
    dstorm.test/known_andorcam_bugs.exp \
    dstorm.test/memory.exp \
    dstorm.test/nojob.exp \
    dstorm.test/output_exception.exp \
    dstorm.test/segfault.exp
RUNTESTDEFAULTFLAGS = --tool dstorm 
