ACLOCAL_AMFLAGS = -I ../m4
AUTOMAKE_OPTIONS = foreign dejagnu

EXTRADIST = \
	config/conger.exp
	config/unix.exp
	rapid2storm.andorcam/action-interruptien.exp
	rapid2storm.andorcam/compute-job.exp
	rapid2storm.andorcam/connect.exp
	rapid2storm.andorcam/emergency-shutdown.exp
	rapid2storm.andorcam/infinite-acquisition.exp
	rapid2storm.andorcam/live-view.exp
	rapid2storm.andorcam/no-installed-cameras.exp
	rapid2storm.bugs/3.exp
	rapid2storm.bugs/43.exp
	rapid2storm.bugs/47.exp
	rapid2storm.bugs/48.exp
	rapid2storm.bugs/51.exp
	rapid2storm.outputs/localization-filter-can-remove-output.exp
	rapid2storm.outputs/localization-filter.exp
	rapid2storm.outputs/viewer.exp
	rapid2storm.00-pre/00-dstorm.exp
	rapid2storm.00-pre/01-plugins-loaded.exp
	rapid2storm.00-pre/02-run-can-succeed.exp
	rapid2storm.00-pre/03-test-plugin-can-close-windows.exp
	rapid2storm.test/autoname.exp
	rapid2storm.test/can-compute-txt-file.exp
	rapid2storm.test/empty_input_file.exp
	rapid2storm.test/empty.stm
	rapid2storm.test/filenames.exp
	rapid2storm.test/help.exp
	rapid2storm.test/job-removal.exp
	rapid2storm.test/load_tif_file.exp
	rapid2storm.test/memory.exp
	rapid2storm.test/nojob.exp
	rapid2storm.test/output_exception.exp
	rapid2storm.test/remove-job.exp
	rapid2storm.test/segfault.exp
	rapid2storm.test/sif-computation.exp
	rapid2storm.test/sif-shortjob.exp
	rapid2storm.volker/fall_a.exp
	rapid2storm.volker/fall_b.exp
	rapid2storm.volker/fall_c.exp
	rapid2storm.volker/fall_d.exp
	rapid2storm.volker/fall_e.exp

AM_RUNTESTFLAGS = DSTORM=$(DESTDIR)$(bindir)/dstorm$(EXEEXT)
